application/ingress_lb/metallb/services_lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-metallb-test 
  namespace: default
  labels:
    app: nginx-metallb-test
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP 
    targetPort: 80
  selector:
    app: nginx-metallb-test
  type: LoadBalancer 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-metallb-test
  namespace: default
  labels:
    app: nginx-metallb-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-metallb-test
  template:
    metadata:
      labels:
        app: nginx-metallb-test
    spec:
      containers:
      - name: nginx-metallb-test
        image: nginx:1.8 
        ports:
        - containerPort: 8080
