application/ingress_lb/metallb/services_np.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-metallb-test 
  namespace: ingress-nginx
  labels:
    app: nginx-metallb-test
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-metallb-test
  type: LoadBalancer 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-metallb-test
  namespace: ingress-nginx
  labels:
    app: nginx-metallb-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-metallb-test
  template:
    metadata:
      labels:
        app: nginx-metallb-test
    spec:
      containers:
      - name: nginx-metallb-test
        image: nginx:1.8 
        ports:
        - containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-test 
  namespace: ingress-nginx
spec:
  ingressClassName: nginx  # 使用 nginx 的 IngressClass（关联的 ingress-nginx 控制器）
  rules:
  - host: demo.wuya.com  # 将域名映射到 my-nginx 服务
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-metallb-test
            port: 
              number: 80
        path: /
